--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,20 @@
   <artifactId>oauth-2_0-sam</artifactId>
   <version>0.2.1-SNAPSHOT</version>
 
+  <repositories>
+    <repository>
+      <id>central</id>
+      <url>http://cart:8081/repository/maven-public/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -20,7 +34,7 @@
           <source>1.6</source>
           <target>1.6</target>
         </configuration>
-      </plugin>      
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -62,13 +76,7 @@
 			</plugin>
     </plugins>
   </build>
-  <repositories>
-    <repository>
-      <id>repository.jboss.org</id>
-      <name>JBoss Repository</name>
-      <url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
-    </repository>
-  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -88,17 +96,21 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jboss.spec</groupId>
-      <artifactId>jboss-javaee-6.0</artifactId>
-      <version>3.0.0.Final</version>
-      <type>pom</type>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.security.auth.message</groupId>
+      <artifactId>javax.security.auth.message-api</artifactId>
+      <version>1.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.8.0</version>
-      <scope>compile</scope>
     </dependency>
   </dependencies>
 
