TA6587 Add smartlogic-parent to fetch Nexus configuration
${env.MERGE_MESSAGE}

Implemented by mwo
Reviewed by fp

--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,17 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+  <parent>
+    <groupId>com.smartlogic</groupId>
+    <artifactId>smartlogic-parent</artifactId>
+    <version>0.0.42</version>
+  </parent>
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.smartlogoic.security</groupId>
   <artifactId>oauth-2_0-sam</artifactId>
-  <version>0.2.2.SNAPSHOT</version>
+  <version>0.2.2-SNAPSHOT</version>
 
   <repositories>
     <repository>
@@ -20,30 +27,13 @@
     </repository>
   </repositories>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.12</version>
-        <configuration>
-          <includes>
-            <include>**/*Test.java</include>
-            <include>**/*Spec.java</include>
-          </includes>
+          <compilerArguments combine.self="override"/>
         </configuration>
       </plugin>
       <plugin>
