--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.smartlogoic.security</groupId>
   <artifactId>oauth-2_0-sam</artifactId>
-  <version>0.2.3.SNAPSHOT</version>
+  <version>0.2.3</version>
 
   <repositories>
     <repository>
