TA9602 Fix the typo and make it releasable
Three changes:
- fix typo in groupId
- fix version to make it deployable to Nexus 0.2.4.SNAPSHOT -> 0.2.4-SNAPSHOT
- bump parent to the newest

Implemented by mwo
Reviewed by ka

--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>com.smartlogic</groupId>
     <artifactId>smartlogic-parent</artifactId>
-    <version>0.0.42</version>
+    <version>0.0.127</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.smartlogoic.security</groupId>
+  <groupId>com.smartlogic.security</groupId>
   <artifactId>oauth-2_0-sam</artifactId>
-  <version>0.2.4.SNAPSHOT</version>
+  <version>0.2.4-SNAPSHOT</version>
 
   <repositories>
     <repository>
