--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.smartlogic.security</groupId>
   <artifactId>oauth-2_0-sam</artifactId>
-  <version>0.2.4-SNAPSHOT</version>
+  <version>0.2.4</version>
 
   <repositories>
     <repository>
